# tagix

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
apps/agent-runtime/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/agent-runtime/app/: __init__.py  checkpoint.py  config.py  db.py  graph.py  health.py  logging.py  main.py  policy.py  types.py
apps/agent-runtime/app/evaluation/: __init__.py  judge.py  prompt.py  schema.py
apps/agent-runtime/app/nodes/: __init__.py  build_prompt.py  call_model.py  finalize.py  load_context.py  tool_dispatch.py
apps/agent-runtime/app/observability/: __init__.py  metrics.py  sentry.py
apps/agent-runtime/app/providers/: __init__.py  embeddings.py  errors.py  openrouter.py  types.py
apps/agent-runtime/app/routes/: __init__.py  embed.py  evaluate.py  run.py
apps/agent-runtime/app/sandbox/: __init__.py
apps/agent-runtime/app/tools/: access_control.py  base.py  callback.py  registry.py
apps/agent-runtime/app/tools/calendar/: __init__.py  get_available_slots.py  list_calendars.py  schedule_event.py
apps/agent-runtime/app/tools/database/: __init__.py  _kb_retrieval.py  base.py  query_contact.py  (+3 more)
apps/agent-runtime/tests/: conftest.py  test_access_control.py  test_embeddings.py  test_evaluate.py  test_graph.py  test_handoff_context.py  test_handoff_to_agent.py  test_health.py  test_logging_redaction.py  test_policy.py  test_providers_openrouter.py  test_sandbox.py  test_search_knowledge_base.py  test_tools_calendar.py  test_tools_callback.py  test_tools_registry.py  test_tools_workflow.py
(+1731 files in other folders)
