[project]
name = "agent-runtime"
version = "0.0.0"
description = "Highermind v2 — microsserviço de agentes IA (FastAPI + LangGraph + OpenRouter)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
