[project]
name = "agent-runtime"
version = "0.0.0"
description = "Highermind v2 — microsserviço de agentes IA (FastAPI + LangGraph + OpenRouter)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "loguru>=0.7",
    "asyncpg>=0.30",
    "langgraph>=0.6",
    "langgraph-checkpoint-postgres>=2.0",
    "langserve>=0.3",
    "langchain-core>=0.3",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
